@@ -1,0 +1,5 @@
+- module: uwsgi
+  metricsets: ["status"]
+  enable: true
+  period: 10s
+  hosts: ["tcp://127.0.0.1:9191"]
