@@ -1,4 +1,2 @@
 - module: uwsgi
-  metricsets: ["status"]
-  period: 10s
   hosts: ["tcp://127.0.0.1:9191"]
